@@ -1,0 +1,59 @@
+﻿<?php
+
+/*
+ +-----------------------------------------------------------------------+
+ | program/localization/index.inc                                        |
+ |                                                                       |
+ | This file is part of the RoundCube Webmail client                     |
+ | Copyright (C) 2005, RoundCube Dev, - Switzerland                      |
+ | Licensed under the GNU GPL                                            |
+ |                                                                       |
+ | PURPOSE:                                                              |
+ |   Provide centralized location for keeping track of                   |
+ |   available languages                                                 |
+ |                                                                       |
+ +-----------------------------------------------------------------------+
+ | Author: Thomas Bruederli <roundcube@gmail.com>                        |
+ +-----------------------------------------------------------------------+
+
+ $Id$
+ 
+ */
+ 
+ $rcube_languages = array(
+	'en'    => 'English (US)',
+	'en_GB' => 'English (GB)',
+	'ar'    => 'Arabic',
+	'bg'    => 'Bulgarian',
+	'cat'   => 'Catalan',
+	'tw'    => 'Chinese (BIG5)',
+	'cn'    => 'Chinese(GB2312)',
+	'cz'    => 'Czech',
+ 	'ca'    => 'Catalan',
+	'da'    => 'Dansk',
+ 	'de'    => 'Deutsch',
+ 	'es'    => 'Espa&ntilde;ol',
+	'fr'    => 'Fran&ccedil;ais', 
+	'ga'    => 'Galician',
+	'el'    => 'Greek',
+	'hu'    => 'Hungarian',
+	'it'    => 'Italiano',
+	'jp'    => 'Japanese', 
+	'kr'    => 'Korean',
+	'lt'    => 'Lithuanian',
+	'nl'    => 'Nederlands',
+	'no'    => 'Norsk (bokm&aring;l)',
+	'fa'    => 'Persian',
+	'pl'    => 'Polski',
+	'pt'    => 'Portuguese (Standard)',
+	'pt_BR' => 'Portuguese (Brazilian)',
+	'ro'    => 'Romanian',
+	'ru'    => 'Russian',
+	'fi'    => 'Suomi',
+	'se'    => 'Svenska',
+	'si'    => 'Slovenian',
+	'tr'    => 'Turkish',
+	'vn'    => 'Vietnamese'
+);
+
+?>
